--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,11 @@
   margin: 0;
   box-sizing: border-box;
 }
+
+html,
+body {
+  overflow-x: hidden;
+}
 :root {
   /* colors */
   --blackColor: #000;
