--- a/src/Style/CartContent.css
+++ b/src/Style/CartContent.css
@@ -1,52 +1,71 @@
 .cart {
   width: 90vw;
   max-width: 1024px;
-  margin: 0 auto;
-  /* add height */
-  margin-top: 40px;
+  margin: 2rem auto;
 }
-
-header h2 {
+header h3 {
   text-align: center;
   text-transform: uppercase;
-  margin-bottom: 5rem;
+  margin-bottom: 3rem;
+  color: #333;
 }
 
-.cart footer {
-  margin: 3rem 0;
+/* cart empty */
+.cart-empty {
   text-align: center;
+  text-transform: uppercase;
+  color: #333;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 50vh;
 }
 
-.cart-total h4 {
-  text-transform: uppercase;
+.cart-empty h3 {
   display: flex;
   align-items: center;
-  justify-content: space-between;
-  margin-top: 1rem;
+  gap: 0.5rem;
+  margin-bottom: 0;
 }
 
-.clear-btn {
-  display: inline-block;
-  background: rgb(51, 51, 51);
+.cart-empty svg {
+  font-size: 3rem;
+}
+
+/* footer */
+
+footer {
+  text-align: center;
+  margin-top: 2rem;
+}
+.amount-total {
+  margin-top: 1.25rem;
+  margin-bottom: 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.amount-total h4 {
+  text-transform: uppercase;
+  letter-spacing: 0.25rem;
+}
+
+.clear-item {
+  background: #333;
+  color: #fff;
   border: transparent;
   outline: none;
+  text-transform: uppercase;
+  padding: 0.75rem 2rem;
+  font-size: 0.875rem;
   border-radius: 0.25rem;
-  color: #fff;
-  padding: 0.5rem 2rem;
-  text-transform: uppercase;
-  letter-spacing: 0.5px;
-  transition: var(--transition);
+  letter-spacing: 0.25rem;
   cursor: pointer;
+  transition: var(--transition);
+  font-weight: bold;
 }
 
-.clear-btn:hover {
-  background: rgb(0, 0, 0);
-}
-
-/* empty */
-.empty-cart {
-  text-align: center;
-  text-transform: uppercase;
-  font-size: 2rem;
-  color: rgb(58, 58, 58);
+.clear-item:hover {
+  background: #d85258;
 }
