--- a/src/Style/CartItem.css
+++ b/src/Style/CartItem.css
@@ -1,31 +1,24 @@
-/* img */
-img {
-  width: 266px;
-  height: 25rem;
+.cart-pic {
+  width: 200px;
+  height: 16rem;
   object-fit: cover;
-  border-radius: 0.25rem;
-  box-shadow: 2px 2px 4px #333;
+  box-shadow: 3px 3px 4px #333;
 }
 
-/* here has children 3 this one is::after
-img,div (info) , and div(increase, decrease, amount) */
 .cart-item {
   display: grid;
   grid-template-columns: auto 1fr auto;
   align-items: center;
-  grid-column-gap: 2rem;
-  /* here for range each cart-item */
-  margin: 1.5rem 0;
+  column-gap: 1.5rem;
+  margin: 2rem 0;
 }
 
 .cart-item h4 {
   text-transform: uppercase;
-  margin-bottom: 0.875rem;
+  letter-spacing: 0.25rem;
 }
-
 .price {
-  color: rgb(87, 85, 85);
-  letter-spacing: 0.5rem;
+  color: rgb(46, 43, 43);
 }
 
 .remove-btn {
@@ -33,49 +26,45 @@ img,div (info) , and div(increase, decrease, amount) */
   border: transparent;
   outline: none;
   text-transform: uppercase;
-  letter-spacing: 0.2rem;
-  font-weight: 200;
+  letter-spacing: 1.2px;
   cursor: pointer;
-}
-
-.amount {
-  text-align: center;
-  margin-bottom: 0;
-  font-size: 1.25rem;
-  padding: 1rem 0;
 }
 
 .amount-btn {
-  background: #333;
-  color: #fff;
+  background: transparent;
   border: transparent;
   outline: none;
   cursor: pointer;
-  border-radius: 0.25rem;
 }
 
 .amount-btn svg {
   font-size: 2rem;
 }
 
-/* responsive */
+.amount-item {
+  text-align: center;
+  margin-bottom: 0;
+  font-size: 1.5rem;
+}
 
-@media (max-width: 320px) {
-  html,
-  body {
-    overflow-x: scroll;
+/* responsive design */
+@media (max-width: 414px) {
+  .cart-pic {
+    width: 150px;
+    height: 14rem;
+  }
+  .cart-item {
+    column-gap: 0.875rem;
   }
 }
 
-@media (max-width: 492px) {
-  img {
-    width: 120px;
-    height: 12rem;
+/* responsive design */
+@media (min-width: 768px) {
+  .cart-pic {
+    width: 250px;
+    height: 20rem;
   }
   .cart-item {
-    grid-column-gap: 1rem;
-  }
-  .amount-btn svg {
-    font-size: 1.25rem;
+    column-gap: 3rem;
   }
 }
