--- a/src/Style/Navbar.css
+++ b/src/Style/Navbar.css
@@ -1,14 +1,14 @@
 nav {
   background: #333;
   color: #fff;
-  /* beri jarak  */
-  padding: 1rem 2rem;
+  padding: 1.5rem 2rem;
 }
 
 .nav-center {
   display: flex;
-  justify-content: space-between;
   align-items: center;
+  justify-content: space-between;
+  /* atur width */
   width: 100%;
   max-width: 1024px;
   margin: 0 auto;
@@ -19,40 +19,27 @@ nav {
   margin-bottom: 0;
 }
 
-/* ini agar bisa amount berada diatas container svg */
-.nav-container {
-  position: relative;
-  display: block;
-}
-
-.nav-container svg {
-  font-size: 3rem;
-}
-
+/* amount-container */
 .amount-container {
+  position: relative;
+}
+
+.amount-container svg {
+  font-size: 2.5rem;
+}
+
+.amount {
   position: absolute;
-  width: 1.5rem;
-  height: 1.5rem;
-  background: #e03535;
-  color: #fff;
-  top: -0.2rem;
-  right: -0.3rem;
-  border-radius: 50%;
-  /* agar posisi p ditengah */
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.amount-container p {
-  font-weight: bold;
-  font-size: 1.25rem;
+  top: -0.8rem;
+  right: -0.8rem;
   margin-bottom: 0;
-}
-
-@media (max-width: 320px) {
-  html,
-  body {
-    overflow-x: scroll;
-  }
+  font-size: 1.2rem;
+  /* add background */
+  background: rgba(223, 45, 45, 0.924);
+  width: 1.65rem;
+  height: 1.65rem;
+  border-radius: 50%;
+  /* flex */
+  display: grid;
+  place-items: center;
 }
